[project]
name = "goose"
description = "GOOSE: Graphs Optimised fOr Search Evaluation"
authors = [{ name = "Dillon Z. Chen", email = "dillon.chen1@gmail.com" }]
license = { file = "LICENSE" }
dynamic = ["version"]

[tool.black]
line-length = 119
extend-exclude = "/(build|venv|.venv|planning/ext/downward|planning/ext/numeric-downward|planning/ext/powerlifted|wlplan|benchmarks)/"

[tool.isort]
profile = "black"
line_length = 119
skip = [
    "build/",
    "venv/",
    ".venv/",
    "planning/ext/downward/",
    "planning/ext/numeric-downward/",
    "planning/ext/powerlifted/",
    "wlplan/",
    "benchmarks/",
]
indent = 4
lines_after_imports = 2
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true

[tool.pytest.ini_options]
addopts = "-x"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "[%(asctime)s %(filename)s::%(lineno)s %(levelname)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = ["tests"]
